src/objects/CVMA_Guest_Request__c/CVMA_Guest_Request__c.object-meta.xml
<CustomObject>
    <description>Guest requests for CVMA event attendance</description>
    <label>CVMA Guest Request</label>
    <nameField>
        <displayFormat>GR-{00000}</displayFormat>
        <label>Guest Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVMA Guest Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>