src/objects/CVMA_Guest_Request__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Guest Requests</relationshipLabel>
    <relationshipName>CVMA_Guest_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>