src/objects/CVMA_Guest_Request__c/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName>
    <label>Guest Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>