src/objects/CVMA_Guest_Request__c/fields/Guest_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_First_Name__c</fullName>
    <label>Guest First Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>