src/objects/CVMA_Guest_Request__c/fields/Guest_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guest_Phone__c</fullName>
    <label>Guest Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>