src/objects/CVMA_Guest_Request__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <label>Request Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>