src/objects/CVMA_Guest_Request__c/fields/Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veteran Status</label>
    <type>Checkbox</type>
</CustomField>